# fixitpy

./: LICENSE  README.md  pyproject.toml
docs/: conf.py  documentation.rst  index.rst  requirements.txt
docs/source/: conf.py  usage.rst
docs/source/_static/: custom.css
fixitpy/: __init__.py  guides.py  retrieve_guide.py  retrieve_media.py
tests/: retrieval.py
