# pyproject.toml
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fixitpy"
version = "0.2.11"
description = "iFixit REST API Interface"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
dependencies = [
    "requests",
]
[project.urls]
"Homepage" = "https://github.com/voldgalf/fixitpy"

[tool.hatch.metadata]
allow-direct-references = true