# pyproject.toml
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fixitpy"
version = "0.2.20"
description = "FixitPy is a uncomplicated Python library for interfacing with iFixit's API. Allowing repair guides to be programmatically retrieved."
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
dependencies = [
    "requests",
]

[project.urls]
Repository = "https://github.com/voldgalf/fixitpy"
Documentation = "https://fixitpy.readthedocs.io/en/latest/"

[tool.hatch.metadata]
allow-direct-references = true